# Sign_Language_Translator

./: .gitignore  DataCollection.py  DataFormattage.py  DataPreparation.py  HandTracker.py  ModelTraining.py  main.py  pyproject.toml
data/albania/: photo_albania_1.txt  photo_albania_11.txt  photo_albania_12.txt  photo_albania_13.txt  photo_albania_15.txt  photo_albania_2.txt  photo_albania_3.txt  photo_albania_4.txt  photo_albania_5.txt  photo_albania_8.txt  photo_albania_9.txt
data/hello/: photo_hello_1.txt  photo_hello_11.txt  photo_hello_13.txt  photo_hello_14.txt  photo_hello_3.txt  photo_hello_5.txt  photo_hello_6.txt  photo_hello_7.txt  photo_hello_8.txt  photo_hello_9.txt
data/i_love_you/: photo_i_love_you_1.txt  photo_i_love_you_10.txt  photo_i_love_you_11.txt  photo_i_love_you_13.txt  photo_i_love_you_15.txt  photo_i_love_you_3.txt  photo_i_love_you_4.txt  photo_i_love_you_5.txt  photo_i_love_you_6.txt  photo_i_love_you_7.txt  photo_i_love_you_8.txt  photo_i_love_you_9.txt
data/no/: photo_no_1.txt  photo_no_10.txt  photo_no_11.txt  photo_no_14.txt  photo_no_2.txt  photo_no_5.txt  photo_no_6.txt  photo_no_8.txt  photo_no_9.txt
data/please/: photo_please_1.txt  photo_please_11.txt  photo_please_13.txt  photo_please_2.txt  photo_please_5.txt  photo_please_8.txt
data/thank_you/: photo_thank_you_1.txt  photo_thank_you_10.txt  photo_thank_you_12.txt  photo_thank_you_13.txt  photo_thank_you_14.txt  photo_thank_you_2.txt  photo_thank_you_3.txt  photo_thank_you_4.txt  photo_thank_you_5.txt  photo_thank_you_6.txt  photo_thank_you_7.txt  photo_thank_you_8.txt  (+1 more)
(+50 files in other folders)
