[project]
name = "sign-language-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.14",
    "more-itertools>=10.8.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "typing>=3.10.0.0",
]
